# anamnesis

./: .dockerignore  .gitignore  AGENT_PROMPT.md  AUTH.md  Architecture.md  CLAUDE.md  CONFORMANCE.md  DEMO.md  DIRECTION.md  Dockerfile  Makefile  PIPELINE.md  PROGRESS.md  README.md  fly.toml  hackathon_get_started_transcript.txt  hackathon_requirements.md  render.yaml  start.sh
backend/: .env.example  PIPELINE.md  README.md  config.py  dump_demo_proposals.py  main.py  po_main.py  pyproject.toml  test_pathB.py  test_pathC.py  test_pathC_probe.py
backend/api/: chat_routes.py  routes.py
backend/context/: auth.py  debug_token.py  prefab_ctx.py  sharp.py  token_verify.py
backend/core/: __init__.py  augment.py  byok.py  cache.py  classifier.py  code_candidates.py  code_search_terms.py  coding.py  diff.py  doc_guardrails.py  effective_profile.py  extraction.py  extraction_merge.py  ids.py  ig_catalog.py  llm.py  mcode_obs.py  preprocess.py  pricing.py  prompt_tuning.py  prompts.py  reconcile.py  reconcile_match_rules.py  retrieval.py  schemas.py  specialty_prompts.py  systems.py  telemetry.py  validation.py  value_set.py
backend/core/augment/: __init__.py  assembly.py  builders.py  citations.py  config.py  helpers.py  mcode.py  overlay.py
backend/core/prompts/: __init__.py  (+6 more)
backend/db/: __init__.py  models.py  session.py
backend/fhir/: bootstrap.py  client.py  coding_subset.py  conformance.py  local_bundle.py  models.py  profile_validate.py  provenance.py  read.py  terminology.py  validate.py  write.py
backend/mcp_server/: prefab_review.py  prefab_theme.py  react_review.py  server.py  tools.py
backend/scripts/: bootstrap.py  build_indexes.py  dump_demo_proposals.py  e2e_oncology.py  e2e_oncology_out.json  exp_live_terminology.py  export_demo_fixture.py  inspect_parquets.py  run_stage1.py  run_stage2.py  smoke_test_indexes.py  test_chat_e2e.py  verify_write.py
backend/services/: chat.py  proposals.py  run_snapshot.py  session_cache.py  usage.py  users.py
backend/spike_prefab/: app.py
backend/tests/: conftest.py  test_auth.py  test_body_site_coding.py  test_byok.py  test_coding_subset.py  test_coding_systems_override.py  test_coding_warmup.py  test_conformance.py  test_doc_guardrails.py  test_e2e_pipeline.py  test_effective_profile.py  test_extraction.py  test_fixed_codings.py  test_ig_catalog.py  test_inline_notes_e2e.py  test_mcode.py  test_mcode_markers_staging.py  test_mcode_obs.py  test_multifocal_merge.py  test_overlay.py  test_preprocess.py  test_profile_validate.py  test_prompt_overrides.py  test_prompt_tuning.py  test_resources_enabled.py  test_scope_assembly.py  test_smoke.py  test_social_observations.py  test_specialty_prompts.py  test_stage2_regression.py  test_stateless_e2e.py  test_telemetry.py  test_terminology.py  test_token_verify.py  test_usage.py  test_users.py  test_validate.py  test_value_set.py  test_vital_observations.py
(+219 files in other folders)
