[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anamnesis-backend"
version = "0.0.1"
description = "Anamnesis FastAPI backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "openai[aiohttp]>=1.14",
    "mcp>=1.9",
    "pyjwt>=2.10",
    "fhir.resources>=7.1",
    "faiss-cpu>=1.7.4",
    "pyarrow>=15.0",
    "sentence-transformers>=2.2",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "db*", "fhir*", "context*", "mcp_server*", "scripts*", "services*"]
exclude = ["tests*"]
