[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anamnesis-backend"
version = "0.0.1"
description = "Anamnesis FastAPI backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "openai[aiohttp]>=1.14",
    "mcp>=1.9",
    "fastmcp[apps]>=3.2.4",
    "prefab-ui>=0.20.2",
    "pyjwt>=2.10",
    "fhir.resources>=7.1",
    "numpy>=1.26",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
faiss = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2",
    "pyarrow>=15.0",
]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "db*", "fhir*", "context*", "mcp_server*", "scripts*", "services*"]
exclude = ["tests*"]
